// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-button-group> Component basic usage 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            About Pega
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 3 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 4 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 5 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Learn More
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component content items button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
  </ul>
  <bolt-button size="xsmall"
               color="primary"
               width="auto"
               border-radius="full"
               align="center"
               transform="none"
               icon-only
  >
    <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <replace-with-children class="c-bolt-button__item">
        Example
      </replace-with-children>
      <replace-with-children class="c-bolt-button__icon c-bolt-button__icon-sizer">
        <bolt-icon slot="after"
                   name="close"
        >
          <span class="c-bolt-icon c-bolt-icon--close">
            <svg class="c-bolt-icon__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <path fill="var(--bolt-theme-icon, currentColor)"
                    fill-rule="evenodd"
                    d="M13.414 11.998l5.296-5.294a1.005 1.005 0 000-1.413 1.005 1.005 0 00-1.414 0L12 10.585 6.704 5.291a1.006 1.006 0 00-1.413 0 1.004 1.004 0 000 1.413l5.296 5.294-5.296 5.295a.999.999 0 101.413 1.413l5.295-5.295 5.296 5.295a.999.999 0 001.413 0 1.005 1.005 0 000-1.413l-5.296-5.295h.002z"
              >
              </path>
            </svg>
          </span>
        </bolt-icon>
      </replace-with-children>
    </button>
  </bolt-button>
  <bolt-button size="xsmall"
               color="secondary"
               width="auto"
               border-radius="regular"
               align="center"
               transform="none"
               icon-only
  >
    <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <replace-with-children class="c-bolt-button__item">
        About Pega
      </replace-with-children>
      <replace-with-children class="c-bolt-button__icon c-bolt-button__icon-sizer">
        <bolt-icon slot="after"
                   name="close"
        >
          <span class="c-bolt-icon c-bolt-icon--close">
            <svg class="c-bolt-icon__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <path fill="var(--bolt-theme-icon, currentColor)"
                    fill-rule="evenodd"
                    d="M13.414 11.998l5.296-5.294a1.005 1.005 0 000-1.413 1.005 1.005 0 00-1.414 0L12 10.585 6.704 5.291a1.006 1.006 0 00-1.413 0 1.004 1.004 0 000 1.413l5.296 5.294-5.296 5.295a.999.999 0 101.413 1.413l5.295-5.295 5.296 5.295a.999.999 0 001.413 0 1.005 1.005 0 000-1.413l-5.296-5.295h.002z"
              >
              </path>
            </svg>
          </span>
        </bolt-icon>
      </replace-with-children>
    </button>
  </bolt-button>
  <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
    <span class="c-bolt-headline__text">
      <span class="c-bolt-headline__text-inner">
        This is text with the tags stripped.
      </span>
    </span>
  </p>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component icon only button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="primary"
                   width="auto"
                   border-radius="full"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            Example
          </replace-with-children>
          <replace-with-children class="c-bolt-button__icon c-bolt-button__icon-sizer">
            <bolt-icon slot="after"
                       name="close"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.414 11.998l5.296-5.294a1.005 1.005 0 000-1.413 1.005 1.005 0 00-1.414 0L12 10.585 6.704 5.291a1.006 1.006 0 00-1.413 0 1.004 1.004 0 000 1.413l5.296 5.294-5.296 5.295a.999.999 0 101.413 1.413l5.295-5.295 5.296 5.295a.999.999 0 001.413 0 1.005 1.005 0 000-1.413l-5.296-5.295h.002z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <replace-with-children class="c-bolt-button__item">
            About Pega
          </replace-with-children>
          <replace-with-children class="c-bolt-button__icon c-bolt-button__icon-sizer">
            <bolt-icon slot="after"
                       name="close"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.414 11.998l5.296-5.294a1.005 1.005 0 000-1.413 1.005 1.005 0 00-1.414 0L12 10.585 6.704 5.291a1.006 1.006 0 00-1.413 0 1.004 1.004 0 000 1.413l5.296 5.294-5.296 5.295a.999.999 0 101.413 1.413l5.295-5.295 5.296 5.295a.999.999 0 001.413 0 1.005 1.005 0 000-1.413l-5.296-5.295h.002z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </replace-with-children>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;
